--- a/rover.css
+++ b/rover.css
@@ -22,11 +22,12 @@
 
 .control-panel{
 	width: 320px;
-	height: 320px;
+	height: 50px;
 	border-style: solid;
 	border-width: 5px;
 	border-color: rgb(100,100,100);
 	margin-left: auto;
 	margin-right: auto;
+	line-height: 30px;
 }
 
