--- a/rover.css
+++ b/rover.css
@@ -28,6 +28,7 @@
 	border-color: rgb(100,100,100);
 	margin-left: auto;
 	margin-right: auto;
-	line-height: 30px;
+	line-height: 50px;
+	text-align: center;
 }
 
